# mmodel

./: .env  .gitignore  Dockerfile  LICENSE.md  README.md  READMEe.md  __init__.py  arc.cxmn  cadex_license.py  cli  config.json  credentials.json  deephops.py  enviroment.yml  environment.yml  hops.py  https_redirect.py  index.html  install_secrets  main.py  models.py  openapi_test.json  playground.py  requirements.txt  setupsecrets.py  vcs.py
bucket_watchdog/: Dockerfile  __main__.py  app.py  buck.py  config.json  enviroment.yml  requirements.txt
connectors/: gzjson.py  rhino.py  speckle.py  treejs.py
conversions/: rhino.py
cxm-s3/: __main__.py  apps.py  whatchers.py
cxm_remote/: __main__.py  apps.py  config.json  env.json  timer.py
cxm_s3/: __main__.py  apps.py
dumps/: a.json
https_redirect/: __init__.py
lahta/: .env  Untitled.ipynb  __main__.py  arc.py  arc_extrusion.py  extiiiiii.3dm  extrusions.py  items.py  objective.configs.cxm.json  playground.json  rat.json  setup_view.py  test.3dm  triacell.py  triangles_decoders.py
meta/: __init__.py  base.py  definelog  meta.py
mm/: _UNACTIVE.PY  __init__.py  baseitems.py  collections.py  framework.py  geom.py  meta.py  parametric.py  requirements.txt  setup.py  tests.py  unactive.py
mmodel_server/: __init__.py  requirements.txt
panels_gh/: 221007_unroll_panel.ghx  221015_Arc.gh  221017_unroll_panel+niche(1).ghx  221017_unroll_panel+niche(1).ghx.gh  221017_unroll_panel+niche(2).ghx  221017_unroll_panel+niche.ghx  Dockerfile  cogs.py  layers.json  main.py  main_arc.py  (+13 more)
party/: CMakeLists.txt  main.cpp
(+162 files in other folders)
